--- a/springmvc01/web/WEB-INF/web.xml
+++ b/springmvc01/web/WEB-INF/web.xml
@@ -21,7 +21,7 @@
         <!-- 配置DispatcherServlet的一个初始化参数，配置SpringMVC配置文件的位置和名称 -->
         <!--
             实际上也可以不通过contextConfigLocation 来配置SpringMVC的配置文件，而使用默认的配置文件
-            默认的配置文件为：/WEB-INF/<servlet-name>=servlet.xml
+            默认的配置文件为：/WEB-INF/<servlet-name>-servlet.xml
         -->
         <init-param>
             <param-name>contextConfigLocation</param-name>
