--- a/springmvc02/src/i18n.properties
+++ b/springmvc02/src/i18n.properties
@@ -1,3 +1,4 @@
+# \u6821\u9A8C\u6CE8\u89E3.bean\u5728\u8BF7\u6C42\u57DF\u4E2D\u7684\u5C5E\u6027\u540D.\u6821\u9A8C\u5C5E\u6027\u540D
 NotEmpty.employee.lastName=^^LastName\u4E0D\u80FD\u4E3A\u7A7A
 Email.employee.email=Email\u4E0D\u5408\u6CD5
 Past.employee.birth=Birth\u4E0D\u80FD\u4E3A\u4E00\u4E2A\u5C06\u6765\u7684\u65F6\u95F4
